Fix align when window is small

--- a/src/style.css
+++ b/src/style.css
@@ -35,4 +35,5 @@ body,
   margin: auto;
   font-size: 42px;
   font-family: 'Red Hat Mono';
+  text-align: center;
 }
